tests/ui/server_send/error/trace_field-is-not-an-assignment-expression.stderr
error: this attribute takes from one to three assign arguments

         = help: use `#[server_send(level=Level::WARN, name="Name", skip=[a, b])]`

 --> tests/ui/server_send/error/trace_field-is-not-an-assignment-expression.rs:3:15
  |
3 | #[server_send(trace, "Server")]
  |               ^^^^^
